# recovery

./: .gitignore  Cargo.toml
Client/: Cargo.toml  teste.txt
Client/src/: algorithms.rs  main.rs  plot.rs  readers.rs
Server/: .gitignore  Cargo.toml
Server/src/: lib.rs  main.rs  server.rs
Server/src/algorithms/: algorithms.rs  mod.rs
Server/src/csv_handlers/: csv_parser.rs  mod.rs
Server/src/files_generator/: image_generator.rs  json_generator.rs  mod.rs  report_generator.rs
Server/src/image_generator/: image_generator.rs  mod.rs
Server/src/models/: algorithms_model.rs  client_model.rs  mod.rs  output_model.rs  report_model.rs
Server/src/usage_monitor/: mod.rs  usage_monitor.rs
src/: algorithms.rs  cge_bench.rs  main.rs  readers.rs
