[package]
name = "Client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
csv = "1.3.0"
nalgebra = {nalgebra = "0.32.3", features = ["sparse"]}
serde = { version = "1.0.190", features = ["derive"] }
nalgebra-sparse = "0.9.0"
image = "0.24.7"

[[bench]]
name="cge_bench"
harness=false
path = "src/cge_bench.rs" 
